<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/recipe_name"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageview"
            android:layout_below="@+id/textview1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitXY"
            android:contentDescription="@string/icon_image_review" />

        <TextView
            android:id="@+id/textview"
            android:text="@string/Categories"
            android:layout_below="@+id/imageview"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>