<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowRecipeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/showRecipe_recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/recipe_name"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <ImageButton
                    android:id="@+id/showRecipe_bt_previous"
                    android:layout_width="50dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/previod_image"
                    android:src="@drawable/ic_baseline_navigate_before" />

                <ImageSwitcher
                    android:id="@+id/show_recipes_image_switcher"
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/showRecipe_bt_next"
                    android:layout_width="50dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/next_image"
                    android:src="@drawable/ic_baseline_navigate_next" />


            </LinearLayout>

            <TextView
                android:id="@+id/showRecipes_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:text="@string/ingredients"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ingredients_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/showRecipes_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/instructions"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/instructions_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/By_writer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/writer_name"
                android:text="@string/by_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="15sp"
                android:textStyle="italic" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>